[package]
name = "icl-transpiler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
lalrpop-util = "0.19.6"
regex = "1"
image = "0.23.14"
rand = "0.8.4"
num-integer = "0.1"
